--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "sigkill"
   ],
   "main": "index.js",
+  "scripts": {
+    "test": "mocha --colors test/test.js --timeout 5000"
+  },
   "repository": "git://github.com/wlodzislav/kill-with-style.git",
   "author": "Vladislav Kaminsky <wlodzislav@ya.ru>",
   "license": "MIT",
